Сделана первая статья для блога

--- a/index.html
+++ b/index.html
@@ -120,6 +120,49 @@
           </ul>
         </div>
       </section>
+      <section class="blog">
+        <p class="blog_text">
+          Our Tea Blog
+        </p>
+        <div class="blog_article">
+          <div class="article_1">
+          <img class="article_1_pic" src="./img/article_1.png" alt="article_1">
+          <div class="blog_div">
+            <span>
+            <p class="article_text_1">Tea Time Travels: Funny Moments from Around the World</p>
+            <p class="article_text_2">by Robinson Crusoe</p>
+          </span>
+            <a class="article_read" href="#">Read <img src="./img/стрелка вправо.svg" alt=">"></a>
+          </div>
+        </div>
+        <div class="article_1">
+          <img class="article_1_pic" src="./img/article_2.png" alt="article_2">
+          <span>
+            <p class="article_text_1">The Role of Tea in Mental Health
+            </p>
+            <p class="article_text_2">by Joker</p>
+            <a class="article_read" href="#">Read <img src="./img/стрелка вправо.svg" alt=">"></a>
+          </span>
+        </div>
+        <div class="article_1">
+          <img class="article_1_pic" src="./img/article_3.png" alt="article_3">
+          <span>
+            <p class="article_text_1">Tea-rific Tales: Hilarious Stories from Tea Lovers</p>
+            <p class="article_text_2">by Casper the Friendly Ghost</p>
+            <a class="article_read" href="#">Read <img src="./img/стрелка вправо.svg" alt=">"></a>
+          </span>
+        </div>
+        <div class="article_1">
+          <img class="article_1_pic" src="./img/article_4.png" alt="article_4">
+          <span>
+            <p class="article_text_1">Tea and Caffeine: Effects on the Brain and Behavior</p>
+            <p class="article_text_2">by Author Authorius</p>
+            <a class="article_read" href="#">Read <img src="./img/стрелка вправо.svg" alt=">"></a>
+          </span>
+        </div>
+        </div>
+      </div>  <div class="blog_button"></div>
+      </section>
     </main>
     <footer></footer>
   </body>
