Сделан footer и еще несколько блоков страницы

--- a/index.html
+++ b/index.html
@@ -161,9 +161,97 @@
           </span>
         </div>
         </div>
-      </div>  <div class="blog_button"></div>
+      </div>  
+      <div class="blog_button">
+        <button class="blog_btn"><span class="span_btn">View all</span></button>
+      </div>
+      </section>
+      <section class="subscribe">
+        <div class="sub_text">
+          <span class="sub_text_1">
+            Want to know more?
+          </span>
+          <span class="sub_text_2">
+            Join our mailing list and stay up-to-date with the latest news, promotions, and exclusive offers from our tea store. Be the first to know about new tea arrivals, seasonal blends, and special discounts. Don't miss out on the tea-rrific perks - sign up today!
+          </span>
+        </div>
+        <div class="sub_form">
+<input type="email" class="sub_input" placeholder="name@email.com">
+<button class="sub_btn">
+  <span class="sub_btn_text">Join</span>
+</button>
+<img src="./img/sub_line.svg" alt="sub_line" class="sub_img"/> 
+<input type="checkbox" class="sub_checkbox">
+<span class="checkbox_text">
+  We take your privacy seriously and are committed to protecting your personal information. By subscribing to our mailing list, you are consenting to receive periodic emails from us about our products, promotions, and other tea-related information.
+</span>
+        </div>
+      </section>
+      <section class="prioritise">
+        <p class="prioritise_text">
+          We Prioritise
+        </p>
+        <div class="prioritise_frame">
+          <div class="prirotise_frame_1">
+            <p class="frame_text_1">Single garden teas</p>
+            <p class="frame_text_2">Complete transparency</p>
+            <img class="frame_pic" src="/img/prioritise_pic_1.svg" alt="prioritise_pic">
+          </div>
+          <div class="prirotise_frame_2">
+            <p class="frame_text_1">Only Loose leaf tea</p>
+            <p class="frame_text_2">Best Drinking Experience</p>
+            <img class="frame_pic" src="/img/prioritise_pic_2.svg" alt="prioritise_pic">
+          </div>
+          <div class="prirotise_frame_3">
+            <p class="frame_text_1">Customer support</p>
+            <p class="frame_text_2">No bots, no automated replies</p>
+            <img class="frame_pic" src="/img/prioritise_pic_3.svg" alt="prioritise_pic">
+          </div>
+          <div class="prirotise_frame_1">
+            <p class="frame_text_1">Fast shipping</p>
+            <p class="frame_text_2">Save, Convenient, Reliable</p>
+            <img class="frame_pic" src="/img/prioritise_pic_4.svg" alt="prioritise_pic">
+          </div>
+        </div>
       </section>
     </main>
-    <footer></footer>
+    <footer class="footer">
+<div class="footer_info">
+  <div class="footer_menu">
+    <p class="footer_menu_text">
+      Products
+    </p>
+    <ul class="menu_ul">
+      <li class="menu_li"><a class="menu_a" href="">Black tea</a></li>
+      <li><a class="menu_a" href="">Green tea</a></li>
+      <li><a class="menu_a" href="">White tea</a></li>
+      <li><a class="menu_a" href="">Oolong tea</a></li>
+      <li><a class="menu_a" href="">Pu-erh tea</a></li>
+    </ul>
+  </div>
+  <div class="footer_menu_comp"><p class="footer_menu_text">
+  Company
+  </p>
+  <ul class="menu_ul_comp">
+    <li class="menu_li"><a class="menu_a" href="">About Us</a></li>
+    <li><a class="menu_a" href="">Contact Us</a></li>
+    <li><a class="menu_a" href="">Our Blog</a></li>
+    <li><a class="menu_a" href="">FAQ</a></li>
+    <li><a class="menu_a" href="">Shipping & Delivery</a></li>
+    <li><a class="menu_a" href="">Refund policy</a></li>
+    <li><a class="menu_a" href="">Terms of Service</a></li>
+  </ul></div>
+  <div class="quatation">
+    <p class="quatation_text_1">
+      “Tea is a journey. It can take you to new places and open your mind to new experiences. Let every sip transport you to a world of wonder and possibility”
+    </p>
+    <p class="quatation_text_2">
+      Dragomir Teodorescu, Tealuxe owner
+    </p>
+  </div>
+  <div></div>
+</div>
+<div class="footer_bottom"></div>
+    </footer>
   </body>
 </html>
