--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <header>
         <div class="header_menu">
           <div class="logo">
-            <img src="./img/logo.svg" alt="Logo" />
+            <a href="#"><img src="./img/logo.svg" alt="Logo" /></a>
           </div>
           <nav class="nav_menu">
             <ul class="nav_ul">
@@ -32,11 +32,11 @@
           </nav>
           <div class="account">
             <div class="acc">
-              <img class="bag_pic" src="./img/mag.svg" alt="bag" />
-              <img class="acc_pic" src="./img/acc.svg" alt="account" />
+              <a href="#"><img class="bag_pic" src="./img/mag.svg" alt="bag" /></a> 
+              <a href="#"><img class="acc_pic" src="./img/acc.svg" alt="account" /></a>
             </div>
             <div class="search">
-              <img class="search_pic" src="./img/search.svg" alt="search" />
+              <a href="#"><img class="search_pic" src="./img/search.svg" alt="search" /></a>
             </div>
           </div>
         </div>
@@ -176,15 +176,18 @@
           </span>
         </div>
         <div class="sub_form">
+          <div class="sub_form_1">
 <input type="email" class="sub_input" placeholder="name@email.com">
 <button class="sub_btn">
   <span class="sub_btn_text">Join</span>
-</button>
-<img src="./img/sub_line.svg" alt="sub_line" class="sub_img"/> 
+</button> 
+</div>
+<div class="sub_form_2">
 <input type="checkbox" class="sub_checkbox">
 <span class="checkbox_text">
   We take your privacy seriously and are committed to protecting your personal information. By subscribing to our mailing list, you are consenting to receive periodic emails from us about our products, promotions, and other tea-related information.
 </span>
+</div>
         </div>
       </section>
       <section class="prioritise">
@@ -249,9 +252,45 @@
       Dragomir Teodorescu, Tealuxe owner
     </p>
   </div>
-  <div></div>
+  <div class="contacts">
+    <p class="contacts_text_1">
+      Stay In Touch
+    </p>
+    <p class="contacts_text_2">
+      Please feel free to contact us via the email of phone. We would be happy to hear from you!
+    </p>
+    <div class="cont">
+<div class="cont_logo">
+  <img class="cont_logo_pic" src="./img/logo.svg" alt="logo">
 </div>
-<div class="footer_bottom"></div>
+<div class="cont_number">
+  <div class="number">
+  <img class="number_pic" src="./img/number.svg" alt="number"></img><input class="number_input" type="phone" placeholder="+370 680 123456">
+</div>
+<div class="email">
+  <img class="email_pic" src="./img/email.svg" alt="email"></img><input class="email_input" type="email" placeholder="info@tealuxe.com">
+</div>
+</div>
+    </div>
+    <div class="icons">
+      <div class="icon"><a href="#"><img src="./img/facebook.svg" alt="facebook"></a></div>
+      <div class="icon"><a href="#"><img src="./img/youtube.svg" alt="youtube"></a></div>
+      <div class="icon"><a href="#"><img src="./img/insta.svg" alt="instagram"></a></div>
+      <div class="icon"><a href="#"><img src="./img/twitter.svg" alt="twitter"></a></div>
+    </div>
+  </div>
+</div>
+<div class="footer_bottom">
+  <p class="other_text">
+    © Tealuxe, 2023
+  </p>
+  <div class="footer_pay">
+    <div class="pay"><a class="pay" href=""><img src="./img/logos_mastercard.svg" alt=""></a></div>
+    <div class="pay"><a class="pay" href=""><img src="./img/visa.svg" alt=""></a></div>
+    <div class="pay"><a class="pay" href=""><img src="./img/logos_google-pay.svg" alt=""></a></div>
+    <div class="pay"><a class="pay" href=""><img src="./img/logos_paypal.svg" alt=""></a></div>
+  </div>
+</div>
     </footer>
   </body>
 </html>
