Сделаны половина медиа для 100px

--- a/index.html
+++ b/index.html
@@ -66,23 +66,15 @@
               <li class="teas_li">
                 <img class="tea_pic" src="./img/black_tea.png" alt="" />Black
               </li>
-            </ul>
-            <ul class="teas_ul">
               <li class="teas_li">
                 <img class="tea_pic" src="./img/green_tea.png" alt="" />Green
               </li>
-            </ul>
-            <ul class="teas_ul">
               <li class="teas_li">
                 <img class="tea_pic" src="./img/white_tea.png" alt="" />White
               </li>
-            </ul>
-            <ul class="teas_ul">
               <li class="teas_li">
                 <img class="tea_pic" src="./img/oolong_tea.png" alt="" />Oolong
               </li>
-            </ul>
-            <ul class="teas_ul">
               <li class="teas_li">
                 <img class="tea_pic" src="./img/ru-erh_tea.png" alt="" />Pu-erh
               </li>
@@ -137,6 +129,7 @@
         </div>
         <div class="article_1">
           <img class="article_1_pic" src="./img/article_2.png" alt="article_2">
+          <div class="blog_div">
           <span>
             <p class="article_text_1">The Role of Tea in Mental Health
             </p>
@@ -144,16 +137,20 @@
             <a class="article_read" href="#">Read <img src="./img/стрелка вправо.svg" alt=">"></a>
           </span>
         </div>
+      </div>
         <div class="article_1">
           <img class="article_1_pic" src="./img/article_3.png" alt="article_3">
+          <div class="blog_div">
           <span>
             <p class="article_text_1">Tea-rific Tales: Hilarious Stories from Tea Lovers</p>
             <p class="article_text_2">by Casper the Friendly Ghost</p>
             <a class="article_read" href="#">Read <img src="./img/стрелка вправо.svg" alt=">"></a>
           </span>
         </div>
+      </div>
         <div class="article_1">
           <img class="article_1_pic" src="./img/article_4.png" alt="article_4">
+          <div class="blog_div">
           <span>
             <p class="article_text_1">Tea and Caffeine: Effects on the Brain and Behavior</p>
             <p class="article_text_2">by Author Authorius</p>
