Доделана верстка адаптивности для 1000px, начата верстка при 768px

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <p class="article_text_1">Tea Time Travels: Funny Moments from Around the World</p>
             <p class="article_text_2">by Robinson Crusoe</p>
           </span>
-            <a class="article_read" href="#">Read <img src="./img/стрелка вправо.svg" alt=">"></a>
+            <a class="article_read" href="#">Read <img class="right" src="./img/стрелка вправо.svg" alt=">"></a>
           </div>
         </div>
         <div class="article_1">
@@ -134,7 +134,7 @@
             <p class="article_text_1">The Role of Tea in Mental Health
             </p>
             <p class="article_text_2">by Joker</p>
-            <a class="article_read" href="#">Read <img src="./img/стрелка вправо.svg" alt=">"></a>
+            <a class="article_read" href="#">Read <img class="right"  src="./img/стрелка вправо.svg" alt=">"></a>
           </span>
         </div>
       </div>
@@ -144,7 +144,7 @@
           <span>
             <p class="article_text_1">Tea-rific Tales: Hilarious Stories from Tea Lovers</p>
             <p class="article_text_2">by Casper the Friendly Ghost</p>
-            <a class="article_read" href="#">Read <img src="./img/стрелка вправо.svg" alt=">"></a>
+            <a class="article_read" href="#">Read <img class="right"  src="./img/стрелка вправо.svg" alt=">"></a>
           </span>
         </div>
       </div>
@@ -154,7 +154,7 @@
           <span>
             <p class="article_text_1">Tea and Caffeine: Effects on the Brain and Behavior</p>
             <p class="article_text_2">by Author Authorius</p>
-            <a class="article_read" href="#">Read <img src="./img/стрелка вправо.svg" alt=">"></a>
+            <a class="article_read" href="#">Read <img class="right"   src="./img/стрелка вправо.svg" alt=">"></a>
           </span>
         </div>
         </div>
@@ -192,22 +192,22 @@
           We Prioritise
         </p>
         <div class="prioritise_frame">
-          <div class="prirotise_frame_1">
+          <div class="prioritise_frame_1">
             <p class="frame_text_1">Single garden teas</p>
             <p class="frame_text_2">Complete transparency</p>
             <img class="frame_pic" src="/img/prioritise_pic_1.svg" alt="prioritise_pic">
           </div>
-          <div class="prirotise_frame_2">
+          <div class="prioritise_frame_2">
             <p class="frame_text_1">Only Loose leaf tea</p>
             <p class="frame_text_2">Best Drinking Experience</p>
             <img class="frame_pic" src="/img/prioritise_pic_2.svg" alt="prioritise_pic">
           </div>
-          <div class="prirotise_frame_3">
+          <div class="prioritise_frame_3">
             <p class="frame_text_1">Customer support</p>
             <p class="frame_text_2">No bots, no automated replies</p>
-            <img class="frame_pic" src="/img/prioritise_pic_3.svg" alt="prioritise_pic">
+            <img class="frame_pic frame_pic_3"  src="/img/prioritise_pic_3.svg" alt="prioritise_pic">
           </div>
-          <div class="prirotise_frame_1">
+          <div class="prioritise_frame_4">
             <p class="frame_text_1">Fast shipping</p>
             <p class="frame_text_2">Save, Convenient, Reliable</p>
             <img class="frame_pic" src="/img/prioritise_pic_4.svg" alt="prioritise_pic">
