--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           </button>
           
           <div class="logo">
-            <a href="#"><img src="./img/logo.svg" alt="Logo" /></a>
+            <a href="#"><img class="logo_480" src="./img/logo.svg" alt="Logo" /></a>
           </div>
           <nav class="nav_menu">
             <ul class="nav_ul">
