Доделана верстка для 360px и 1200px

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           <img class="article_1_pic" src="./img/article_2.png" alt="article_2">
           <div class="blog_div">
           <span>
-            <p class="article_text_1">The Role of Tea in Mental Health
+            <p class="article_text_1" id="article_text_1">The Role of Tea in Mental Health
             </p>
             <p class="article_text_2">by Joker</p>
           </span>
@@ -143,7 +143,7 @@
           
         </div>
         </div>
-        <div class="article_1">
+        <div class="article_1" id="article_3">
           <img class="article_1_pic" src="./img/article_3.png" alt="article_3">
           <div class="blog_div">
           <span>
@@ -154,7 +154,7 @@
           
         </div>
       </div>
-        <div class="article_1 article_4">
+        <div class="article_1 article_4" id="article_3">
           <img class="article_1_pic" src="./img/article_4.png" alt="article_4">
           <div class="blog_div">
           <span>
